* Updated .gitignore

* Made the project open-source

* MC Server stats should be using the animated emojis

* The link to the source will be shown when you tagged the bot

* Fixed 'findEmoji' function

* Added server IP field to server status

* Cleaned info command and added source link to info command

* More aliases for show icon command

* Allowed arguments for help command (ex: -help <command name>)

* Tagging bot to show info is more strict than before

* Added command object for identifier

* Modified 'listeners' folder to 'events'

* Added 'category' to commands

* Renamed 'ListenerHandler' to 'EventHandler'

* Added eval command

12/19/2019 (UTC+7)